# IBOT-DC-tenure-25-26

./: LICENSE  README.md  electronics_sprint_2
cv_bootcamp/: Readme.md  assignment_1.py  first_assignment.py
cv_bootcamp/day_1/: assignment_1_bonus.py  assignment_1_final.py  first_assignment.py  task_1.py  task_2.py  test.py
cv_bootcamp/day_2/: assignment_2.py  task_1.py  task_2.py
cv_bootcamp/day_3/: .gitignore  CNN_neural_network.py  CNN_practice_1.py  CNN_practice_2.py  assignment_3.py  assignment_3_bonus_1.py  assignment_3_bonus_2.py  transfer_learning.ipynb
electronics_workshop_phase/: task_1_0_3.cpp
electronics_workshop_phase/task 1.1/task_1_1_1/: task_1_1_1.ino
electronics_workshop_phase/task 1.1/task_1_1_2/: task_1_1_2.ino
electronics_workshop_phase/task 1.1/task_1_1_3/: task_1_1_3.ino
electronics_workshop_phase/task 1.1/task_1_1_5/: task_1_1_5.ino
electronics_workshop_phase/task 1.1/task_1_1_6/: task_1_1_6.ino
electronics_workshop_phase/task 1.1/task_1_1_7/: task_1_1_7.ino
electronics_workshop_phase/task 1.2/task_1_2_1/: task_1_2_1.ino
electronics_workshop_phase/task_1_0_1/: task_1_0_1.ino
electronics_workshop_phase/task_1_0_2/: task_1_0_2.ino
electronics_workshop_phase/task_1_1_4/: task_1_1_4.ino
electronics_workshop_phase/task_1_2_2/: task_1_2_2.ino
electronics_workshop_phase/task_1_2_4/: task_1_2_4.ino
my_turtle_project/: package.xml  setup.cfg  setup.py
my_turtle_project/my_turtle_project/: follow_turtle.py  spawn_ball_turtle.py  spawn_player_2_turtle.py  turtle_ball.py  turtle_player_1.py  turtle_player_2.py
(+7 files in other folders)
